syntax = "proto3";
package wrappers;

import "gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;


// StringValues is a list of strings.
message StringValues {
    repeated string Values = 1;
}

// LabelValues is a list of key value pairs, where key is a string
// and value is a list of string values.
message LabelValues {
    // Values contains key value pairs.
    map<string, StringValues> Values = 1 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "labels"];
}
